--- a/src/features/monsterblock/Monsterblock.module.css
+++ b/src/features/monsterblock/Monsterblock.module.css
@@ -1,8 +1,13 @@
 .centered {
-    width: 800px;
-    margin: auto;
+  margin: auto;
 }
 
 .block {
-    width: 800px;
+  width: 800px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
+
